<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/homiez_logo"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:background="@drawable/logo_background"
        android:src="@drawable/homiez_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/editUserID"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_above="@id/editPassword"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_inputbox"
        android:hint="User ID"
        android:paddingLeft="20dp"
        android:singleLine="true"
        android:textColor="@color/colorGrey"
        android:textColorHint="@color/colorGrey"
        android:textSize="28dp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_above="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_inputbox"
        android:hint="Password"
        android:paddingLeft="20dp"
        android:password="true"
        android:singleLine="true"
        android:textColor="@color/colorGrey"
        android:textColorHint="@color/colorGrey"
        android:textSize="28dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_above="@id/accountText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/login_btn_background"
        android:gravity="center"
        android:onClick="loginPressed"
        android:paddingLeft="20dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/accountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account yet?"
        android:textSize="20dp"
        android:textColor="@color/colorGrey"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/signup"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up"
        android:onClick="signupPressed"
        android:textSize="30dp"
        android:textColor="@color/colorYellow"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="10dp"/>
</RelativeLayout>
