...
    <string name="homiez_logo">homiez_logo</string>
    <string name="match">Match</string>
    <string name="location">Location</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="login">Login</string>
    <string name="user_id_prompt">Enter User ID:</string>
    <string name="matches">Your Matches</string>
    <string name="posting_matches">Posting Matches</string>
    <string name="profile_matches">Profile Matches</string>
    <string name="postings">Postings</string>
    <string name="your_postings">Your Postings</string>
...
