<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/find_room"
        android:title="Find Rooms"
        android:icon="@drawable/ic_search" />
    <item
        android:id="@+id/your_rooms"
        android:title="Your Rooms"
        android:icon="@drawable/ic_list" />
    <item
        android:id="@+id/profile"
        android:title="Profile"
        android:icon="@drawable/ic_profile" />
</menu>